// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockicon basic BlockIcon, add marginRight property 1`] = `
<i
  className="yard-blocks__block-icon fa-icon"
  style={
    {
      "marginRight": "5px",
    }
  }
/>
`;

exports[`Blockicon basic BlockIcon, pass faClasses 1`] = `
<i
  className="yard-blocks__block-icon fa-icon"
  style={{}}
/>
`;

exports[`Blockicon basic basic test 1`] = `
<i
  className="yard-blocks__block-icon"
  style={{}}
/>
`;
